# final-exam

./: main.py  pyproject.toml  readme.md
static/: app.html  server.js
