[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "extralab"
version = "0.1.0"
[tool.poetry.dependencies]
Flask-Cors = "^3.0"
python = "^3.7"
Flask = "^1.1"
Flask-JWT = "^0.3.2"
flask-sqlalchemy = "^2.4"
sqlalchemy = "^1.3"
flask-login = "^0.5.0"
[tool.poetry.dev-dependencies]
